--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "quill",
-  "version": "1.3.7",
+  "name": "@25sprout/quill",
+  "version": "1.3.8",
   "description": "Your powerful, rich text editor",
   "author": "Jason Chen <jhchen7@gmail.com>",
   "homepage": "http://quilljs.com",
@@ -81,6 +81,7 @@
   },
   "scripts": {
     "build": "webpack --config _develop/webpack.config.js; rm dist/quill.core dist/quill.bubble dist/quill.snow;",
+    "build:25sprout-release": "webpack --config _develop/webpack.config.js --env.minimize",
     "build:release": "./_develop/scripts/release.sh",
     "start": "npm run build; bundle exec foreman start -f _develop/procfile",
     "test": "npm run test:unit",
